ast/src/snapshots/transmute_ast__parser__tests__array_access_multi.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Ok(
    Ast {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "a",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(1),
                    span: 1:1; [0, 1],
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: IdentRefId(0),
                        span: 1:1; [0, 1],
                    },
                ),
                span: 1:1; [0, 1],
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: Literal(
                    Literal {
                        kind: Number(0),
                        span: 1:3; [2, 3],
                    },
                ),
                span: 1:3; [2, 3],
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: ArrayAccess(
                    ExprId(0),
                    ExprId(1),
                ),
                span: 1:2; [1, 4],
            },
            ExprId(3) => Expression {
                id: ExprId(3),
                kind: Literal(
                    Literal {
                        kind: Number(0),
                        span: 1:6; [5, 6],
                    },
                ),
                span: 1:6; [5, 6],
            },
            ExprId(4) => Expression {
                id: ExprId(4),
                kind: ArrayAccess(
                    ExprId(2),
                    ExprId(3),
                ),
                span: 1:5; [4, 7],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                    },
                    InputId(0),
                    [
                        StmtId(1),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Expression(
                    ExprId(4),
                ),
                span: 1:5; [4, 8],
            },
        ],
        type_defs: [],
        root: StmtId(0),
    },
)
