ast/src/snapshots/transmute_ast__parser__tests__array_and_dot_access.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"a.b[0].c;\")).parse()"
---
Ok(
    Ast {
        identifiers: [
            IdentId(0) => "a",
            IdentId(1) => "b",
            IdentId(2) => "c",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(0),
                    span: 1:1; [0, 1],
                },
            },
            IdentRefId(1) => IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(1),
                    span: 1:3; [2, 3],
                },
            },
            IdentRefId(2) => IdentifierRef {
                id: IdentRefId(2),
                ident: Identifier {
                    id: IdentId(2),
                    span: 1:8; [7, 8],
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: IdentRefId(0),
                        span: 1:1; [0, 1],
                    },
                ),
                span: 1:1; [0, 1],
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: Access(
                    ExprId(0),
                    IdentRefId(1),
                ),
                span: 1:1; [0, 3],
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: Literal(
                    Literal {
                        kind: Number(0),
                        span: 1:5; [4, 5],
                    },
                ),
                span: 1:5; [4, 5],
            },
            ExprId(3) => Expression {
                id: ExprId(3),
                kind: ArrayAccess(
                    ExprId(1),
                    ExprId(2),
                ),
                span: 1:4; [3, 6],
            },
            ExprId(4) => Expression {
                id: ExprId(4),
                kind: Access(
                    ExprId(3),
                    IdentRefId(2),
                ),
                span: 1:4; [3, 8],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Expression(
                    ExprId(4),
                ),
                span: 1:4; [3, 9],
            },
        ],
        type_defs: [],
        roots: [
            StmtId(0),
        ],
    },
)
