ast/src/snapshots/transmute_ast__parser__tests__empty_statement.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Ok(
    Ast {
        identifiers: [
            IdentId(0) => "<root>",
        ],
        identifier_refs: [],
        expressions: [],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                    },
                    InputId(0),
                    [],
                ),
                span: 0:0; [0, 0],
            },
        ],
        type_defs: [],
        root: StmtId(0),
    },
)
