ast/src/snapshots/transmute_ast__parser__tests__err_annotations_on_true.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"let f() { @a1 while false {} }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Annotations not supported on expressions",
                span: 1:11; [10, 13],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    402,
                ),
            },
        ],
    },
)
