ast/src/snapshots/transmute_ast__parser__tests__err_array_access_missing_bracked_eof.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"a[0\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `eof`, expected one of (13) `.`, `*`, `/`, `-`, `+`, `==`, `!=`, `>`, `>=`, `<`, `<=`, `]`, `[`",
                span: 1:4; [3, 3],
                level: Error,
            },
        ],
    },
)
