ast/src/snapshots/transmute_ast__parser__tests__err_array_access_missing_bracked_semi.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"a[0;\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `;`, expected one of (13) `.`, `*`, `/`, `-`, `+`, `==`, `!=`, `>`, `>=`, `<`, `<=`, `]`, `[`",
                span: 1:4; [3, 4],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    1258,
                ),
            },
        ],
    },
)
