ast/src/snapshots/transmute_ast__parser__tests__err_array_instantiation_empty.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"[];\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `]`, expected one of (9) identifier, number, `true`, `false`, `if`, `while`, `(`, `-`, `[`",
                span: 1:2; [1, 2],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    1653,
                ),
            },
        ],
    },
)
