ast/src/snapshots/transmute_ast__parser__tests__err_array_instantiation_missing_closing_bracket.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"[0;\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `;`, expected one of (15) `,`, `.`, `(`, `*`, `/`, `-`, `+`, `==`, `!=`, `>`, `>=`, `<`, `<=`, `]`, `[`",
                span: 1:3; [2, 3],
                level: Error,
            },
        ],
    },
)
